--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,7 +4,7 @@
 
 .glint {
     box-shadow:
-        0 1px 1px theme('colors.black / 20%'),
+        0 0 1px theme('colors.black / 20%'),
         inset 0 1px theme('colors.white / 40%');
 }
 
